Bug 1885842 - Apply ancestor-scope-reset to list-item counter only. r=dholbert

This is not amazing, but this keeps our behavior following the spec for
all counters minus the list-item counter, which needs this for compat,
see bug 1548753.

Differential Revision: https://phabricator.services.mozilla.com/D204879